@@ -29,7 +29,6 @@ import net.javacrumbs.jsonunit.core.Option;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpStatus;
-import org.assertj.core.api.AssertionsForClassTypes;
 import org.cyclonedx.proto.v1_6.Bom;
 import org.dependencytrack.JerseyTestRule;
 import org.dependencytrack.ResourceTest;
@@ -53,6 +52,7 @@ import org.dependencytrack.model.Vulnerability;
 import org.dependencytrack.model.WorkflowStep;
 import org.dependencytrack.notification.NotificationConstants;
 import org.dependencytrack.parser.cyclonedx.CycloneDxValidator;
+import org.dependencytrack.proto.notification.v1.BomValidationFailedSubject;
 import org.dependencytrack.resources.v1.vo.BomSubmitRequest;
 import org.glassfish.jersey.client.ClientConfig;
 import org.glassfish.jersey.client.HttpUrlConnectorProvider;
@@ -1216,7 +1216,7 @@ public class BomResourceTest extends ResourceTest {
     }
 
     @Test
-    public void uploadBomInvalidJsonTest() throws InterruptedException {
+    public void uploadBomInvalidJsonTest() throws Exception {
         initializeWithPermissions(Permissions.BOM_UPLOAD);
 
         final var project = new Project();
@@ -1263,17 +1263,28 @@ public class BomResourceTest extends ResourceTest {
                 """);
 
         assertThat(kafkaMockProducer.history()).hasSize(1);
-        final org.dependencytrack.proto.notification.v1.Notification userNotification = deserializeValue(KafkaTopics.NOTIFICATION_USER, kafkaMockProducer.history().get(0));
-        AssertionsForClassTypes.assertThat(userNotification).isNotNull();
-        AssertionsForClassTypes.assertThat(userNotification.getScope()).isEqualTo(SCOPE_PORTFOLIO);
-        AssertionsForClassTypes.assertThat(userNotification.getGroup()).isEqualTo(GROUP_BOM_VALIDATION_FAILED);
-        AssertionsForClassTypes.assertThat(userNotification.getLevel()).isEqualTo(LEVEL_ERROR);
-        AssertionsForClassTypes.assertThat(userNotification.getTitle()).isEqualTo(NotificationConstants.Title.BOM_VALIDATION_FAILED);
-        AssertionsForClassTypes.assertThat(userNotification.getContent()).isEqualTo("An error occurred while validating a BOM");
+        final org.dependencytrack.proto.notification.v1.Notification validationFailureNotification =
+                deserializeValue(KafkaTopics.NOTIFICATION_BOM, kafkaMockProducer.history().getFirst());
+        assertThat(validationFailureNotification).isNotNull();
+        assertThat(validationFailureNotification.getScope()).isEqualTo(SCOPE_PORTFOLIO);
+        assertThat(validationFailureNotification.getGroup()).isEqualTo(GROUP_BOM_VALIDATION_FAILED);
+        assertThat(validationFailureNotification.getLevel()).isEqualTo(LEVEL_ERROR);
+        assertThat(validationFailureNotification.getTitle()).isEqualTo(NotificationConstants.Title.BOM_VALIDATION_FAILED);
+        assertThat(validationFailureNotification.getContent()).isEqualTo("An error occurred while validating a BOM");
+        assertThat(validationFailureNotification.getSubject().is(BomValidationFailedSubject.class)).isTrue();
+
+        final var subject = validationFailureNotification.getSubject().unpack(BomValidationFailedSubject.class);
+        assertThat(subject.getBom().getFormat()).isEmpty();
+        assertThat(subject.getBom().getSpecVersion()).isEmpty();
+        assertThat(subject.getBom().getContent()).isEqualTo("(Omitted)");
+        assertThat(subject.getErrorsList()).containsOnly("""
+                $.components[0].type: does not have a value in the enumeration \
+                ["application", "framework", "library", "container", "operating-system", \
+                "device", "firmware", "file"]""");
     }
 
     @Test
-    public void uploadBomInvalidXmlTest() throws InterruptedException {
+    public void uploadBomInvalidXmlTest() throws Exception {
         initializeWithPermissions(Permissions.BOM_UPLOAD);
 
         final var project = new Project();
@@ -1317,13 +1328,23 @@ public class BomResourceTest extends ResourceTest {
                 """);
 
         assertThat(kafkaMockProducer.history()).hasSize(1);
-        final org.dependencytrack.proto.notification.v1.Notification userNotification = deserializeValue(KafkaTopics.NOTIFICATION_USER, kafkaMockProducer.history().get(0));
-        AssertionsForClassTypes.assertThat(userNotification).isNotNull();
-        AssertionsForClassTypes.assertThat(userNotification.getScope()).isEqualTo(SCOPE_PORTFOLIO);
-        AssertionsForClassTypes.assertThat(userNotification.getGroup()).isEqualTo(GROUP_BOM_VALIDATION_FAILED);
-        AssertionsForClassTypes.assertThat(userNotification.getLevel()).isEqualTo(LEVEL_ERROR);
-        AssertionsForClassTypes.assertThat(userNotification.getTitle()).isEqualTo(NotificationConstants.Title.BOM_VALIDATION_FAILED);
-        AssertionsForClassTypes.assertThat(userNotification.getContent()).isEqualTo("An error occurred while validating a BOM");
+        final org.dependencytrack.proto.notification.v1.Notification validationFailureNotification =
+                deserializeValue(KafkaTopics.NOTIFICATION_BOM, kafkaMockProducer.history().getFirst());
+        assertThat(validationFailureNotification).isNotNull();
+        assertThat(validationFailureNotification.getScope()).isEqualTo(SCOPE_PORTFOLIO);
+        assertThat(validationFailureNotification.getGroup()).isEqualTo(GROUP_BOM_VALIDATION_FAILED);
+        assertThat(validationFailureNotification.getLevel()).isEqualTo(LEVEL_ERROR);
+        assertThat(validationFailureNotification.getTitle()).isEqualTo(NotificationConstants.Title.BOM_VALIDATION_FAILED);
+        assertThat(validationFailureNotification.getContent()).isEqualTo("An error occurred while validating a BOM");
+        assertThat(validationFailureNotification.getSubject().is(BomValidationFailedSubject.class)).isTrue();
+
+        final var subject = validationFailureNotification.getSubject().unpack(BomValidationFailedSubject.class);
+        assertThat(subject.getBom().getFormat()).isEmpty();
+        assertThat(subject.getBom().getSpecVersion()).isEmpty();
+        assertThat(subject.getBom().getContent()).isEqualTo("(Omitted)");
+        assertThat(subject.getErrorsList()).containsExactlyInAnyOrder(
+                "cvc-enumeration-valid: Value 'foo' is not facet-valid with respect to enumeration '[application, framework, library, container, operating-system, device, firmware, file]'. It must be a value from the enumeration.",
+                "cvc-attribute.3: The value 'foo' of attribute 'type' on element 'component' is not valid with respect to its type, 'classification'.");
     }
 
     @Test
